--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,45 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--primary: #c6a664;
+	--secondary: #1e1e1e;
+	--background: #121212;
+	--foreground: #eaeaea;
+	--light-cell: #f0d9b5;
+	--dark-cell: #b58863;
+	--error: #e53935;
+	--success: #43a047;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--color-primary: var(--primary);
+	--color-secondary: var(--secondary);
+	--color-light-cell: var(--light-cell);
+	--color-dark-cell: var(--dark-cell);
+	--color-error: var(--error);
+	--color-success: var(--success);
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
 }
-
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+	background: var(--background);
+	color: var(--foreground);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
 }
